Add eval and explain functionalities to UI and APIs (#6)
- Adds query evaluation and Explain to the playground using partiql-lang-rust 0.2.0 new features.
- In addition it adds /explain and /eval REST APIs for Explain and evaluation functionalities.

--- a/src/css/partiql-playground.css
+++ b/src/css/partiql-playground.css
@@ -19,11 +19,34 @@
 }
 
 #env-div {
-    border: 1px solid #ccc;
+    border: 0px solid #ccc;
     display: none;
 }
 
+#eval-result-div {
+    border: 0px solid #ccc;
+    background-color: #f1f1f1;
+    display: none;
+}
+
+#eval-result {
+    background-color: #0B0A09;
+    color: #fff3cd;
+    alignment: left;
+    height: 500px;
+    max-height: 700px;
+}
+
 #env-data {
+    display: block;
+    min-width: 100%;
+    alignment: left;
+    box-sizing: border-box;
+    height: 500px;
+    max-height: 700px;
+}
+
+#eval-result {
     display: block;
     min-width: 100%;
     alignment: left;
